<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:id="@+id/containerLinearLayout">

    <TextView
        android:id="@+id/textView_titleDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_title"
        android:text="@string/title_details"/>

    <ImageView
        android:id="@+id/imageView_cover"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/textView_bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_subtitle"/>

    <TextView
        android:id="@+id/textView_bookPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="SYNOPSYS"/>

    <TextView
        android:id="@+id/textView_bookSynopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
</LinearLayout>