<?xml version="1.0" encoding="utf-8"?>
<com.gourbiliere.henripotier.BookItemView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:id="@+id/bookItemView">

    <ImageView
        android:id="@+id/coverImageView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="0.3"
        android:layout_marginRight="5dp"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:text="Garry Potier Tome 1"
        android:layout_marginRight="5dp"/>

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:text="15€"/>
</com.gourbiliere.henripotier.BookItemView>